# mishrasuyash-strat.github.io

./: Gemfile  README.md  _config.yml  about.md  blog.html  configure.sh  index.html  papers.html  robots.txt  sitemap.xml
_data/: papers.yml
_includes/: footer.html  head.html  header.html
_layouts/: default.html  post.html
_posts/: 2026-01-06-finder-multimodal-pharma-search.md  2026-01-08-personalized-pharmacy-video-clips.md  2026-01-08-scaling-vlms-longform-video.md  2026-02-11-neurosymbolic-schauder-topos.md  2026-04-08-egpf-personalization-as-a-game.md  2026-04-08-prism-evolutionary-memory.md  2026-04-09-vcao-vulnerability-discovery-as-a-game.md  2026-06-22-yukti-robust-verifiable-decisions.md  2026-06-28-gluing-local-decisions.md  2026-07-09-quorum-post.md  2026-07-09-welcome.md  2026-07-10-quorum-post.html  2026-07-12-sharp-blog.html  2026-07-21-calculus-of-discernment.md  2026_07_12_sharp_blog.html  DEPLOY.md  README.md  index.html  quorum-post.md  sharp_blog.html
papers/: README.md
sharp/: LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
sharp/examples/: demo_headtohead.py  demo_portfolio.py  demo_reflexivity_gap.py
sharp/experiments/: config.py  fig1_trap.py  fig2_gap.py  fig3_cobweb.py  fig4_regime.py  fig5_stability.py  pharma_case.py  style.py
sharp/paper/: sharp.tex
sharp/sharp/: __init__.py  competitor.py  controller.py  dgp.py  dynamics.py  estimator.py  metrics.py  optimizer.py  portfolio.py  reflexive.py  regime.py  simulator.py
sharp/tests/: test_sharp.py
suyashmishra-site/: README.md  about.html  index.html
(+6 files in other folders)
