[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sharp"
version = "0.1.0"
description = "Reflexive causal inference for pricing in strategic, non-stationary markets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Suyash Mishra" }]
keywords = ["causal inference", "performative prediction", "pricing",
            "instrumental variables", "double machine learning", "game theory",
            "distributionally robust optimization", "decision intelligence"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["sharp*"]

[tool.pytest.ini_options]
markers = ["slow: end-to-end controller runs (deselect with -m 'not slow')"]
